[package]
name = "epoll"
version = "4.1.0"
authors = ["Nathan Sizemore <nathanrsizemore@gmail.com>"]
description = "Safe epoll interface."
readme = "README.md"
keywords = ["epoll"]
license = "MPL-2.0"
repository = "https://github.com/nathansizemore/epoll"
documentation = "https://docs.rs/epoll/"

[dependencies]
libc = "0.2"
bitflags = "1.0"
